Switched colors around for sections and some buttons Added background colors to the rest of the content sections Figured out the issue with projects div not expanding to size. (add width and overflow styles)

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,10 @@ nav .logo-pad {
 }
 
 .div-content {
+  margin-top: 30px;
   padding: 4px 0 10px;
+  width: auto;
+  overflow: auto;
 }
 
 .h-pad {
